non-msrv-tests/tests/ui/zeroize/item.stderr
error: unsupported trait, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize, ZeroizeOnDrop
 --> tests/ui/zeroize/item.rs:3:16
  |
3 | #[derive_where(skip_inner, Clone)]
  |                ^^^^^^^^^^

error: unsupported trait syntax, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize, ZeroizeOnDrop
 --> tests/ui/zeroize/item.rs:6:24
  |
6 | #[derive_where(Debug = invalid; T)]
  |                        ^^^^^^^

error: unsupported trait syntax, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize, ZeroizeOnDrop
 --> tests/ui/zeroize/item.rs:9:16
  |
9 | #[derive_where(,)]
  |                ^

error: unsupported trait syntax, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize, ZeroizeOnDrop
  --> tests/ui/zeroize/item.rs:12:16
   |
12 | #[derive_where(,Clone)]
   |                ^

error: unsupported trait syntax, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize, ZeroizeOnDrop
  --> tests/ui/zeroize/item.rs:15:22
   |
15 | #[derive_where(Clone,,)]
   |                      ^

error: unsupported trait, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize, ZeroizeOnDrop
  --> tests/ui/zeroize/item.rs:18:16
   |
18 | #[derive_where(T)]
   |                ^
